--- a/src/styles/components/sidebar.sass
+++ b/src/styles/components/sidebar.sass
@@ -4,7 +4,7 @@
 #sidebar
   @include mixins.center
   align-items: center
-  // justify-content: initial
+  justify-content: initial
   flex-direction: column
   background-color: variables.$bg-color
   flex: 1 1 0
@@ -21,7 +21,7 @@
     color: variables.$text-color-secondary
     background-color: variables.$bg-color-secondary
     border-radius: variables.$card-border-radius
-    margin-top: 12rem
+    margin-top: 14rem
     padding: .8rem 1.2rem
   .btn
     @include mixins.btn
