--- a/src/styles/mixins.sass
+++ b/src/styles/mixins.sass
@@ -11,3 +11,9 @@
   background: variables.$gradient
   text-decoration: none
   border-radius: 3rem
+
+@mixin gradient-border
+  content: ''
+  background: variables.$gradient
+  height: 3px
+  width: 30%
